[tool.poetry]
name = "kalbi-scrapper"
version = "0.1.0"
description = ""
authors = ["gebraryz <gebraryz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.67.1"
ics = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
